--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.17.0",
     "file-loader": "^5.0.2",
+    "path": "^0.12.7",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   },
